kubernetes/apps/network/external-services/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app home-assistant
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  clusterIP: None
  ports:
    - name: http
      port: &port 8123
      protocol: TCP
      targetPort: *port
  type: ClusterIP
