kubernetes/apps/network/external-services/home-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app home-assistant
  annotations:
    hajimari.io/group: Home-Automation
    hajimari.io/icon: mdi:automation
    hajimari.io/info: Home Automation Hub
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ingressClassName: nginx
  rules:
    - host: &host "home-assistant.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  number: 8123
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
